fix css cropper

--- a/assets/scss/components/course/_couse-select-avatar.scss
+++ b/assets/scss/components/course/_couse-select-avatar.scss
@@ -34,10 +34,10 @@
     padding-top: 113%;
 
     .vue-cropper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        position: absolute !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        height: 100% !important;
     }
 }
